<resources>
    <string name="app_name">Mixic</string>
    <string name="home">Home</string>
    <string name="device">Device</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="slogan">Play Your Own Way</string>
    <string name="featured">Featured</string>
    <string name="category">Category</string>
    <string name="new_songs">New Songs</string>
    <string name="view_all">View All</string>
    <string name="recent_played">Recent Played</string>
    <string name="songs_you_ve_played_recently">Songs you\'ve played recently</string>
    <string name="lyrics">Lyrics</string>
    <string name="device_s_songs">Device\'s Songs</string>
    <string name="setting">Setting</string>
    <string name="change_password">Change Password</string>
    <string name="change_theme">Change theme</string>
    <string name="sign_out">Sign Out</string>
    <string name="expand">Expand</string>
    <string name="loading_lyrics">Loading Lyrics...</string>
    <string name="error_loading_lyrics">Cannot find lyrics for this song</string>
    <string name="blank"> </string>
    <string name="search_from_cloud">Search from Cloud</string>
    <string name="search_from_your_device">Search from Your Device</string>
    <string name="equalizer">Equalizer</string>
    <string name="enable_equalizer">Enable Equalizer </string>
    <string name="_60_hz">60 Hz</string>
    <string name="_230_hz">230 Hz</string>
    <string name="_910_hz">910 Hz</string>
    <string name="_3_khz">3 kHz</string>
    <string name="_14_khz">14 kHz</string>
    <string name="classical">Classical</string>
    <string name="pop">Pop</string>
    <string name="edm">EDM</string>
    <string name="jazz">Jazz</string>
    <string name="surround_sound">Surround Sound</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="rock">Rock</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password_success">Reset password success! Please check your email!</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_or_password_empty">Email or password is empty!</string>
    <string name="please_fill_all_fields">Please fill all field!</string>
    <string name="please_fill_email">Please fill email!</string>
    <string name="wrong_confirm_password">Confirm password is not correct!</string>
    <string name="register_success">Regis new user success with email: </string>
    <string name="read_media_audio">Read Media Audio</string>
    <string name="read_external_storage">Read External Storage</string>
    <string name="confirm_password">Confirm password</string>
    <string name="find_password">Find Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="change_password_success">Change password success!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="display_name">Display name</string>
    <string name="password_length_error">Password must be between 6 and 16 characters</string>
    <string name="optional_permissions">Optional permissions</string>
    <string name="external_storage_des">To read music files from your device and store downloaded music files</string>
    <string name="notification">Notification</string>
    <string name="notification_des">To show notification when music is playing and to control music playback when the app is running in the background</string>
    <string name="btn_continue">Continue</string>
    <string name="necessary_permissions">Necessary permissions</string>
    <string name="permissions_title">Mixic uses these permissions</string>
    <string name="update_profile">Update Profile</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="skip">Skip</string>
    <string name="upload_photo_error">Upload photo error!</string>
    <string name="update_profile_error">Update profile error!</string>
    <string name="display_name_length_error">Display name must be between 5 and 12 characters</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="follow_system">Follow System</string>
    <string name="download">Download</string>
    <string name="details">Details</string>
    <string name="notice">Notice!</string>
    <string name="alert_on_denied_storage">This app needs to access device storage to get music files. Please grant permission and restart the app!</string>
    <string name="alert_exit_app">Do you want to exit app? Music will still play in the background.</string>
    <string name="alert_on_denied_image">You need to grant permission to access device images to update profile. Please grant permission and restart the app!</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="download_already_exist">This song already in your device!</string>
    <string name="download_start">Downloading... Please wait!</string>
    <string name="download_success">Download success!</string>
    <string name="download_error">Download error!</string>
    <string name="search_here">Search here!</string>
    <string name="playlists">Playlists</string>
    <string name="cloud_s_playlist">Cloud\'s Playlist</string>
    <string name="your_device_s_playlist">Your Device\'s Playlist</string>
    <string name="new_playlist">New Playlist</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="song_already_added">This song already added to playlist!</string>
    <string name="please_fill_playlist_name">Please fill playlist name!</string>
    <string name="playlist_name_already_exists">Playlist name already exist. Please enter another name!</string>
    <string name="queue_list">Queue List</string>
    <string name="close">Close</string>
</resources>