<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_equalizer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equalizer"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_equalizer"
        app:layout_constraintTop_toTopOf="@id/switch_equalizer"
        app:layout_constraintBottom_toBottomOf="@id/switch_equalizer"
        app:layout_constraintEnd_toStartOf="@id/switch_equalizer" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_equalizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:thumbTint="@color/main_component_color"
        app:trackTint="@color/grey_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_equalizer_title" />

    <LinearLayout
        android:id="@+id/ll_band"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:baselineAligned="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_equalizer">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_bar_60Hz"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:rotation="270"
                android:backgroundTint="@color/grey_color"
                android:progressTint="@color/main_component_color"
                android:thumbTint="@color/main_component_color"
                android:max="100"
                android:progress="50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:text="@string/_60_hz" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_bar_230Hz"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:rotation="270"
                android:backgroundTint="@color/grey_color"
                android:progressTint="@color/main_component_color"
                android:thumbTint="@color/main_component_color"
                android:max="100"
                android:progress="50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:text="@string/_230_hz" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_bar_910Hz"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:rotation="270"
                android:backgroundTint="@color/grey_color"
                android:progressTint="@color/main_component_color"
                android:thumbTint="@color/main_component_color"
                android:max="100"
                android:progress="50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:text="@string/_910_hz" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_bar_3kHz"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:rotation="270"
                android:backgroundTint="@color/grey_color"
                android:progressTint="@color/main_component_color"
                android:thumbTint="@color/main_component_color"
                android:max="100"
                android:progress="50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:text="@string/_3_khz" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_bar_14kHz"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:rotation="270"
                android:backgroundTint="@color/grey_color"
                android:progressTint="@color/main_component_color"
                android:thumbTint="@color/main_component_color"
                android:max="100"
                android:progress="50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:text="@string/_14_khz" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_bass_boost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bass_boost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_band" />

    <SeekBar
        android:id="@+id/seek_bar_bass_boost"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:progressTint="@color/main_component_color"
        android:backgroundTint="@color/grey_color"
        android:thumbTint="@color/main_component_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_bass_boost" />


    <TextView
        android:id="@+id/tv_surround_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/surround_sound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bass_boost" />

    <SeekBar
        android:id="@+id/seek_bar_surround_sound"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progressTint="@color/main_component_color"
        android:backgroundTint="@color/grey_color"
        android:thumbTint="@color/main_component_color"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_surround_sound" />

    <LinearLayout
        android:id="@+id/ll_templates"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar_surround_sound">

        <Button
            android:id="@+id/btn_classical"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_color"
            android:text="@string/classical" />

        <Button
            android:id="@+id/btn_pop"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/grey_color"
            android:text="@string/pop" />

        <Button
            android:id="@+id/btn_edm"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/grey_color"
            android:text="@string/edm" />

        <Button
            android:id="@+id/btn_jazz"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/grey_color"
            android:text="@string/jazz" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>